load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

exports_files(["verify-golds.ts"])

ts_library(
    name = "verify-golds-src",
    srcs = ["verify-golds.ts"],
    deps = [
        "@npm//@bazel/runfiles",
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "verify-golds",
    data = [
        ":verify-golds-src",
    ],
    entry_point = ":verify-golds.ts",
    templated_args = ["--bazel_patch_module_resolver"],
)
