load("//tools/esbuild:index.bzl", "esbuild_config")
load(":index.bzl", "create_angular_bundle_targets")

package(default_visibility = ["//visibility:public"])

esbuild_config(
    name = "esbuild_config",
    config_file = "esbuild.config.mjs",
    deps = ["@npm//@angular/compiler-cli", "@npm//esbuild-plugin-babel"],
)

create_angular_bundle_targets()
